<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/addDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_delay"
        app:layout_constraintBottom_toTopOf="@+id/doAsyncTaskButton"
        app:layout_constraintEnd_toEndOf="@+id/doAsyncTaskButton"
        app:layout_constraintStart_toStartOf="@+id/doAsyncTaskButton" />

    <Button
        android:id="@+id/doAsyncTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment_by_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/historyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/doAsyncTaskButton"
        app:layout_constraintStart_toStartOf="@+id/doAsyncTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/doAsyncTaskButton"
        tools:text="0" />

</androidx.constraintlayout.widget.ConstraintLayout>